@@ -88,7 +88,9 @@ $app_pass  = 'pnpassword';
 // User administration should be done through the aplication's interface
 $user_can_update_password = false;
 $admin_can_add_user = false;
-$admin_can_delete_user = false;
+
+// Allow admin to delete user from webcal tables
+$admin_can_delete_user = true;
 
 
 // Checks to see if the user is logged into the application
@@ -329,16 +331,85 @@ function user_is_admin($uid,$Admins) {
   }
 }
 
+// Delete a user from the webcalendar tables. (NOT from PostNuke)
+// We assume that we've already checked to make sure this user doesn't
+// have events still in the database.
+// params:
+//   $user - user to delete
+function user_delete_user ( $user ) {
+  // Get event ids for all events this user is a participant
+  $events = array ();
+  $res = dbi_query ( "SELECT webcal_entry.cal_id " .
+    "FROM webcal_entry, webcal_entry_user " .
+    "WHERE webcal_entry.cal_id = webcal_entry_user.cal_id " .
+    "AND webcal_entry_user.cal_login = '$user'" );
+  if ( $res ) {
+    while ( $row = dbi_fetch_row ( $res ) ) {
+      $events[] = $row[0];
+    }
+  }
+
+  // Now count number of participants in each event...
+  // If just 1, then save id to be deleted
+  $delete_em = array ();
+  for ( $i = 0; $i < count ( $events ); $i++ ) {
+    $res = dbi_query ( "SELECT COUNT(*) FROM webcal_entry_user " .
+      "WHERE cal_id = " . $events[$i] );
+    if ( $res ) {
+      if ( $row = dbi_fetch_row ( $res ) ) {
+        if ( $row[0] == 1 )
+	  $delete_em[] = $events[$i];
+      }
+      dbi_free_result ( $res );
+    }
+  }
+  // Now delete events that were just for this user
+  for ( $i = 0; $i < count ( $delete_em ); $i++ ) {
+    dbi_query ( "DELETE FROM webcal_entry WHERE cal_id = " . $delete_em[$i] );
+  }
+
+  // Delete user participation from events
+  dbi_query ( "DELETE FROM webcal_entry_user WHERE cal_login = '$user'" );
+
+  // Delete preferences
+  dbi_query ( "DELETE FROM webcal_user_pref WHERE cal_login = '$user'" );
+
+  // Delete from groups
+  dbi_query ( "DELETE FROM webcal_group_user WHERE cal_login = '$user'" );
+
+  // Delete bosses & assistants
+  dbi_query ( "DELETE FROM webcal_asst WHERE cal_boss = '$user'" );
+  dbi_query ( "DELETE FROM webcal_asst WHERE cal_assistant = '$user'" );
+
+  // Delete user's views
+  $delete_em = array ();
+  $res = dbi_query ( "SELECT cal_view_id FROM webcal_view " .
+    "WHERE cal_owner = '$user'" );
+  if ( $res ) {
+    while ( $row = dbi_fetch_row ( $res ) ) {
+      $delete_em[] = $row[0];
+    }
+    dbi_free_result ( $res );
+  }
+  for ( $i = 0; $i < count ( $delete_em ); $i++ ) {
+    dbi_query ( "DELETE FROM webcal_view_user WHERE cal_view_id = " .
+      $delete_em[$i] );
+  }
+  dbi_query ( "DELETE FROM webcal_view WHERE cal_owner = '$user'" );
+
+  // Delete layers
+  dbi_query ( "DELETE FROM webcal_user_layers WHERE cal_login = '$user'" );
+
+  // Delete any layers other users may have that point to this user.
+  dbi_query ( "DELETE FROM webcal_user_layers WHERE cal_layeruser = '$user'" );
+}
+
 // Functions we don't use with this file:
 function user_update_user ( $user, $firstname, $lastname, $email, $admin ) {
   global $error;
   $error = 'User admin not supported.'; return false;
 }
 function user_update_user_password ( $user, $password ) {
-  global $error;
-  $error = 'User admin not supported.'; return false;
-}
-function user_delete_user ( $user ) {
   global $error;
   $error = 'User admin not supported.'; return false;
 }
